# text_compressor_tira

./: .coveragerc  .gitignore  README.md  pyproject.toml  tasks.py
.github/workflows/: main.yml
Documentation/: design_document.md
Documentation/Weekly Reports/: weekly_report_2.md  weekly_report_4.md
documentation/: implementation_document.md  testing_document.md
documentation/Weekly Reports/: weekly_report_1.md  weekly_report_3.md  weekly_report_4.md  weekly_report_5.md  weekly_report_6.md
src/: main.py  performance_test.py
src/data/: test.txt
src/entities/: node.py
src/repositories/: file_repository.py
src/services/: file_service.py  huffman_service.py  lzw_service.py
src/tests/data/: longer.txt
src/tests/repositories/: file_repository_test.py
src/tests/repositories/data/: test1.txt
src/tests/services/: file_service_test.py  huffman_service_test.py  lzw_service_test.py
src/ui/: ui.py
