[tool.poetry]
name = "text_compressor_tira"
version = "0.1.0"
description = ""
authors = ["VoxBorealis <uusitalo.y@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pycodestyle = "^2.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
